# liblzw

./: .gitignore  AUTHORS  COPYING  ChangeLog  INSTALL  Makefile.am  NEWS  README  README.md  autogen.sh  clean.sh  configure.ac  headers.h  helpers.h  liblzw-config.in  liblzw.pc.in  lzw.c  lzw.h  lzw_internal.h
.github/workflows/: build-test-ci.yml
tests/: .gitignore  Makefile  Makefile.am  local.at  lot.Z  lot.c  lot.good.bz2  simple.Z  simple.c  simple.good.bz2  simple2.Z  simple2.c  simple2.good.bz2  stdf_bzcheck.at  tests.h  testsuite.at  uncompress.c
